@startuml
entity Libro {
+ID : string
--
Titulo : string
AutorID : int
GeneroID : int
}

entity Autor {
+ID : int
--
Nombre : string
}

entity Genero {
+ID : int
--
Nombre : string
}

entity Imagen {
+ID : int
--
LibroID : string
URL : string
Descripcion : string
}

Libro }o--|| Autor : pertenece a
Libro }o--|| Genero : clasificado en
Libro ||--o{ Imagen : contiene
Autor }o--o{ Genero : trabaja en

@enduml
